# System_Programming

./: README.md
C_plus_plus/: CMakeLists.txt  lol.txt
C_plus_plus/Basics/10_error/: error.cpp
C_plus_plus/Basics/11_array/: 2dArray.cpp
C_plus_plus/Basics/12_loop/: doWhile.cpp  loop.cpp
C_plus_plus/Basics/13_STL_array/: swap.cpp
C_plus_plus/Basics/14_vector/: emplaceBack.cpp  pushBack.cpp  vector.cpp
C_plus_plus/Basics/15_function/: function.cpp
C_plus_plus/Basics/16_namespace/: namespace.cpp
C_plus_plus/Basics/17_sets/: sets.cpp
C_plus_plus/Basics/18_tupples/: tupple.cpp
C_plus_plus/Basics/19_map/: hashMap.cpp  map.cpp  mapCharno.cpp
C_plus_plus/Basics/1_InitialBasic/: CMakeLists.txt  main.cpp
C_plus_plus/Basics/20_sort/: sort.cpp
C_plus_plus/Basics/21_lamda/: lamda.cpp
C_plus_plus/Basics/22_defineMacro/: defineMacro.cpp
C_plus_plus/Basics/23_OOP/: CopyConstructor.cpp  constructor.cpp  objectInOtherObject.cpp  opp.cpp
C_plus_plus/Basics/24_OOP_Function/: Book.cpp  Book.hpp  main.cpp
C_plus_plus/Basics/25_inheritance/: inheritance.cpp
C_plus_plus/Basics/26_constant/: const.cpp  goodPractice.cpp
C_plus_plus/Basics/27_composition/: Birthday.cpp  Birthday.h  Person.cpp  Person.h  main.cpp
C_plus_plus/Basics/28_friendFunction/: friendFunction.cpp
C_plus_plus/Basics/29_readingFile/: file.txt  lol.text  lol.txt  ofstream.cpp
C_plus_plus/Basics/2_variableDataType/: variableDataType.cpp
C_plus_plus/Basics/30_operatorOverloading/: operatorOverloading.cpp
C_plus_plus/Basics/31_cMake/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
C_plus_plus/Basics/32_struct/: struct.cpp
C_plus_plus/Basics/33_template/: otherUsage.cpp  template.cpp
C_plus_plus/Basics/34_pointerReferencing/: pointer.cpp
C_plus_plus/Basics/35_smartPointer/: smartPointer.cpp
C_plus_plus/Basics/36__thread/: CMakeLists.txt  main.cpp
C_plus_plus/Basics/36_thread/: threads.cpp
C_plus_plus/Basics/38_reference/: carComparision.cpp  reference.cpp
C_plus_plus/Basics/39_overloadedOperator/: overloadedOperator.cpp
C_plus_plus/Basics/39_ssStream/: osStream.cpp  ssStream.cpp
C_plus_plus/Basics/3_inputOutput/: inputOutput.cpp
C_plus_plus/Basics/40_dynamicCasting/: casting.cpp
C_plus_plus/Basics/41_singleTone/: example.cpp  singleTone.cpp
C_plus_plus/Basics/42_iterator/: iterator.cpp
C_plus_plus/Basics/43_iterator/: iterator.cpp
C_plus_plus/Basics/44_optional/: optional.cpp
C_plus_plus/Basics/44_template/: generic.cpp
C_plus_plus/Basics/45. FunctionPointer/: funcPointer.cpp  passingFuncPointer.cpp
C_plus_plus/Basics/46_String/: dataF.cpp  erase.cpp  npos.cpp  replace.cpp  swap.cpp
C_plus_plus/Basics/47_regx/: regx1.cpp  regx2.cpp
C_plus_plus/Basics/48_best_Practice/: avoid_reinterpret_cast.cpp  castingConst.cpp  examples.cpp  rangeBasedForLoop.cpp  std_array_overCarray.cpp
C_plus_plus/Basics/49_const/: const_1.cpp
C_plus_plus/Basics/4_math/: math.cpp
C_plus_plus/Basics/50_pair/: pari.cpp
C_plus_plus/Basics/5_string/: string.cpp
C_plus_plus/Basics/6_case/: case.cpp
C_plus_plus/Basics/7_recursion/: recursion.cpp
C_plus_plus/Basics/8_random/: random.cpp
C_plus_plus/Basics/9_enum/: enum.cpp  enum1.cpp  enum2.cpp
C_plus_plus/Basics/HelloWorld/: main.cpp
C_plus_plus/Basics/try/: try.cpp
C_plus_plus/CPP_Problems/: Hello.cpp
C_plus_plus/CPP_Problems/assignment_classes_and_strings/: url.cc  url.h  url_test.cc
C_plus_plus/DesignPattern/Builder/: builder.cpp  html.cpp
C_plus_plus/DesignPattern/Builder/Car/: CarBuilderDiagram.puml  fileStrucure.txt  main.cpp
C_plus_plus/DesignPattern/Builder/Car/header/: Car.h  CarBuilder.h  Director.h  SUVBuilder.h  SedanBuilder.h
C_plus_plus/DesignPattern/Builder/Car/src/: Car.cpp  Director.cpp  SUVBuilder.cpp  SedanBuilder.cpp
C_plus_plus/DesignPattern/Builder/fluentBuilder/: Builder.h  CMakeLists.txt  Car.h  Engine.h  Makefile  Wheel.h  fluentBuilder.puml  main.cpp
C_plus_plus/DesignPattern/Builder/recursive/: recursive.cpp  recursive_smart_pointer.cpp
C_plus_plus/DesignPattern/CRTP/CRTP/: Circle.h  Main.cpp  Shape.h  Square.h  crtp_shape.H
C_plus_plus/DesignPattern/CRTP/traditional/: Circle.cpp  Circle.h  Shape.h  Square.cpp  Square.h  main.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/CRTP/CRTP/: Circle.h  Main.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/CRTP/traditional/: Circle.cpp  Square.h  main.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/DependencyInversion/withDIP/: CreditCardPayment.cpp  CreditCardPayment.h  IPaymentMethod.h  PayPalPayment.cpp  PayPalPayment.h  PaymentProcessor.cpp  PaymentProcessor.h  main.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/DependencyInversion/withoutDIP/: CreditCardPayment.cpp  CreditCardPayment.h  PayPalPayment.cpp  PayPalPayment.h  PaymentProcessor.cpp  PaymentProcessor.h  main.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/LiskovSusbstitution/Liskov/: Rectangle.cpp  (+4 more)
C_plus_plus/DesignPattern/Solid_Design_Principle/OpenClosedPrinciple/: openClosed.cpp
C_plus_plus/DesignPattern/Solid_Design_Principle/interfaceSegregation/: interfaceSegregation.cpp
C_plus_plus/DesignPattern/functionalProgramming/choosingFunction@Runtime/: functionalTry.cpp
C_plus_plus/DesignPattern/functionalProgramming/methodChaining/: methodChaining.cpp
C_plus_plus/Modern_CPP/: l_r_values.cpp
C_plus_plus/Modern_CPP/1_FilesAndStream/: CharactersBlock.cpp  binaryFile.cpp  binaryRecord.cpp  file.txt  fileMode1.cpp  flush.cpp  getPut.cpp  ifstream.cpp  istreamIterator.cpp  ofstream.cpp  ostreamIterator.cpp  randomAccessStream.cpp  reading.cpp  stream_Manu.cpp  textDataInDat.cpp  writingFile.cpp
C_plus_plus/Modern_CPP/section_5/: CopyElision.cpp  constructor.cpp  defaultDelete.cpp  deligate.cpp  operatorConversion1.cpp
C_plus_plus/STL/Template Function/: TemplateFunction.cpp
MVVM/: CMakeLists.txt  main.cpp
MVVM/include/model/: Person.h
MVVM/include/view/: ConsoleView.h
MVVM/include/viewmodel/: PersonViewModel.h
MVVM/src/model/: Person.cpp
MVVM/src/view/: ConsoleView.cpp
MVVM/src/viewmodel/: PersonViewModel.cpp
(+31 files in other folders)
